<@natymoraes>Finaliza Site

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ ul.sem-marcador, ol.sem-marcador{
   list-style: none;
 }
 
-a.botao, imput.botao{
+a.botao, input.botao{
   background: #1f3c58;
   padding: 5px 10px;
   border-radius: 3px;
@@ -120,7 +120,7 @@ a.botao, imput.botao{
   border: none;
 }
 
-a.botao:hover, imput.botao:hover{
+a.botao:hover, input.botao:hover{
 background: #315e8a;
 text-decoration:none;
 }
